# docs/openapi.json
@@ -12,7 +12,7 @@
     "/": {
       "get": {
         "tags": [
-          "crate"
+          "cluster"
         ],
         "summary": "Handler for the root endpoint, emulating the default OpenSearch response",
         "operationId": "root_handler",
@@ -33,7 +33,7 @@
     "/_bulk": {
       "post": {
         "tags": [
-          "crate"
+          "ingest"
         ],
         "summary": "Handler for OpenSearch compatible bulk ingestion",
         "operationId": "bulk_handler",
@@ -69,7 +69,7 @@
     "/_health": {
       "get": {
         "tags": [
-          "crate"
+          "cluster"
         ],
         "summary": "Handler for the cluster health endpoint (/_health or /_cluster/health)",
         "operationId": "health_handler",
@@ -87,10 +87,40 @@
         }
       }
     },
+    "/_search": {
+      "get": {
+        "tags": [
+          "search"
+        ],
+        "summary": "OpenSearch `/_search` endpoint (searches all indices)",
+        "operationId": "global_search_handler",
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/SearchRequestBody"
+                  }
+                ],
+                "nullable": true
+              }
+            }
+          },
+          "required": false
+        },
+        "responses": {
+          "200": {
+            "description": "Search results"
+          }
+        }
+      }
+    },
     "/_stats": {
       "get": {
         "tags": [
-          "crate"
+          "cluster"
         ],
         "summary": "Handler for the statistics endpoint (/_stats)",
         "operationId": "stats_handler",
@@ -111,7 +141,7 @@
     "/{index}/_doc": {
       "post": {
         "tags": [
-          "crate"
+          "ingest"
         ],
         "summary": "Handler for ingesting a single document",
         "operationId": "ingest_doc_handler",
@@ -151,6 +181,46 @@
           },
           "500": {
             "description": "Failed to write to WAL"
+          }
+        }
+      }
+    },
+    "/{index}/_search": {
+      "get": {
+        "tags": [
+          "search"
+        ],
+        "summary": "OpenSearch `/:index/_search` endpoint (searches a specific index)",
+        "operationId": "index_search_handler",
+        "parameters": [
+          {
+            "name": "index",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "allOf": [
+                  {
+                    "$ref": "#/components/schemas/SearchRequestBody"
+                  }
+                ],
+                "nullable": true
+              }
+            }
+          },
+          "required": false
+        },
+        "responses": {
+          "200": {
+            "description": "Search results for index"
           }
         }
       }
@@ -249,10 +319,16 @@
         "required": [
           "total",
           "successful",
+          "skipped",
           "failed"
         ],
         "properties": {
           "failed": {
+            "type": "integer",
+            "format": "int32",
+            "minimum": 0
+          },
+          "skipped": {
             "type": "integer",
             "format": "int32",
             "minimum": 0
