# src/api/mod.rs
@@ -1,5 +1,6 @@
 pub mod cluster;
 pub mod ingest;
+pub mod search;
 
 use axum::{
     Router,
@@ -9,12 +10,15 @@ use utoipa::OpenApi;
 
 pub use cluster::*;
 pub use ingest::*;
+pub use search::*;
 
 use crate::wal::WalRequest;
+use tantivy::IndexReader;
 
 #[derive(Clone)]
 pub struct AppState {
     pub wal_sender: tokio::sync::mpsc::Sender<WalRequest>,
+    pub index_reader: IndexReader,
 }
 
 // Generate the OpenAPI schema from the handlers and structs
@@ -25,7 +29,9 @@ pub struct AppState {
         cluster::health_handler,
         cluster::stats_handler,
         ingest::ingest_doc_handler,
-        ingest::bulk_handler
+        ingest::bulk_handler,
+        search::global_search_handler,
+        search::index_search_handler
     ),
     components(schemas(
         cluster::HealthResponse,
@@ -52,5 +58,13 @@ pub fn app_router(state: AppState) -> Router {
         .route("/_stats", get(cluster::stats_handler))
         .route("/_bulk", post(ingest::bulk_handler))
         .route("/:index/_doc", post(ingest::ingest_doc_handler))
+        .route(
+            "/_search",
+            get(search::global_search_handler).post(search::global_search_handler),
+        )
+        .route(
+            "/:index/_search",
+            get(search::index_search_handler).post(search::index_search_handler),
+        )
         .with_state(state)
 }
